--- a/kththesis/references.bib
+++ b/kththesis/references.bib
@@ -91,6 +91,50 @@
     url={https://staff.fnwi.uva.nl/a.s.z.belloum/MSctheses/MScthesis_Tjarco.pdf}
 }
 
+@inproceedings{gambhir2018analysis,
+  title={Analysis of cache in service worker and performance scoring of progressive web application},
+  author[1]={Gambhir, Abhi},
+  author[2]={Raj, Gaurav},
+  booktitle={2018 International Conference on Advances in Computing and Communication Engineering (ICACCE)},
+  pages={294--299},
+  year={2018},
+  organization={IEEE}
+}
+
+@article{ciman2017empirical,
+  title={An empirical analysis of energy consumption of cross-platform frameworks for mobile development},
+  author={Ciman, Matteo and Gaggi, Ombretta},
+  journal={Pervasive and Mobile Computing},
+  volume={39},
+  pages={214--230},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@inproceedings{malavolta2016beyond,
+  title={Beyond native apps: web technologies to the rescue!(keynote)},
+  author={Malavolta, Ivano},
+  booktitle={Proceedings of the 1st International Workshop on Mobile Development},
+  pages={1--2},
+  year={2016}
+}
+
+@inproceedings{steiner2018web,
+  title={What is in a Web View: An Analysis of Progressive Web App Features When the Means of Web Access is not a Web Browser},
+  author={Steiner, Thomas},
+  booktitle={Companion Proceedings of the The Web Conference 2018},
+  pages={789--796},
+  year={2018}
+}
+
+@inproceedings{pande2018enhanced,
+  title={Enhanced web application and browsing performance through service-worker infusion framework},
+  author={Pande, Neha and Somani, Aayushi and Samal, Siba Prasad and Kakkirala, Vasu},
+  booktitle={2018 IEEE International Conference on Web Services (ICWS)},
+  pages={195--202},
+  year={2018},
+  organization={IEEE}
+}
 
 @inproceedings{SW_and_energy,
     pages = {35--45},
